--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
-  cloud_firestore: ^4.4.5
+  firebase_crashlytics: ^3.3.2
 
 dev_dependencies:
   flutter_test:
